[rs-dataprovider] Add tests to ScheduledDataProviderTasksTest - Fix Sonar issues